// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`express-schema-server performs invalid json schema validation 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "MIN_LENGTH",
      "description": "User name",
      "message": "String is too short (1 chars), minimum 3",
      "params": Array [
        1,
        3,
      ],
      "path": "#/name",
      "schemaId": undefined,
    },
  ],
  "isValid": false,
}
`;

exports[`express-schema-server performs valid json schema validation 1`] = `
Object {
  "errors": Array [],
  "isValid": true,
}
`;

exports[`express-schema-server provides detailed error class 1`] = `[Error: Message]`;

exports[`express-schema-server provides detailed error class, details are optional 1`] = `[Error: Message]`;

exports[`express-schema-server provides helper for combining messages 1`] = `""`;

exports[`express-schema-server provides helper for combining messages 2`] = `"Test1"`;

exports[`express-schema-server provides helper for combining messages 3`] = `"Test1 and Test2"`;

exports[`express-schema-server provides helper for combining messages 4`] = `"Test1, Test2 and Test3"`;

exports[`express-schema-server provides helper for pagination page options 1`] = `
Object {
  "itemsPerPage": 5,
  "page": 2,
}
`;

exports[`express-schema-server provides helper for pagination page options, one can specify default items per page 1`] = `
Object {
  "itemsPerPage": 5,
  "page": 2,
}
`;

exports[`express-schema-server provides schema endpoint for all endpoints 1`] = `undefined`;

exports[`express-schema-server provides schema endpoint for specific endpoints 1`] = `undefined`;

exports[`express-schema-server schema validation fails if missing validator 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "INVALID_FORMAT",
      "description": "User name",
      "message": "Object didn't pass validation for format throws-error: Jack Daniels",
      "params": Array [
        "throws-error",
        "Jack Daniels",
      ],
      "path": "#/",
      "schemaId": null,
    },
  ],
  "isValid": false,
}
`;
